[package]
name = "hear-the-traffic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
http-body-util = { version = "0.1.3", features = ["full"] }
hyper = { version = "1.6.0", features = ["http1", "server"] }
hyper-util = "0.1.11"
parking_lot = "0.12"
reqwest = { version = "0.12.15", features = ["json"] }
rustfft = "6.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
